
export class Question {
    // classe inspirée de la classe conceptuelle (du MDD)

    private _id: number;
    private _idEspaceCours: number
    private _tags: []
    private _nom: string
    private _descriptionQuestion: string
    private _reponse: boolean
    private _descriptionReponse: string
    private _mauvaiseReponseDescription: string
    private _nbOccurence: number
    static currentId: number = 0;

    constructor(questionJson: string) {
        if (questionJson == undefined)
            return;

        let values = JSON.parse(questionJson);
        this._idEspaceCours = parseInt(values.idEspaceCours);

        this._tags = values.tags ? values.tags.toLowerCase().split(",")
            .filter((tag, index, list) => list.indexOf(tag) === index) : [];
        this._nom = values.nom;
        this._descriptionQuestion = values.description;
        this._reponse = Boolean(values.reponse);
        this._descriptionReponse = values.descriptionReponse
        this._mauvaiseReponseDescription = values.descriptionMauvaiseReponse;
        this._id = ++Question.currentId;
        this._nbOccurence = 0
    }

    public modifier(questionJson: string) {
        let values = JSON.parse(questionJson);
        this._tags = values.tags.toLowerCase().split(",")
            .filter((tag, index, list) => list.indexOf(tag) === index);
        this._nom = values.nom;
        this._descriptionQuestion = values.description;
        this._reponse = values.reponse;
        this._descriptionReponse = values.descriptionReponse
        this._mauvaiseReponseDescription = values.descriptionMauvaiseReponse;
    }

    public getIdEspaceCours() {
        return this._idEspaceCours;
    }
    public getId() {
        return this._id;
    }
    public getNom() {
        return this._nom;
    }
    public getReponse() {
        return this._reponse;
    }
    
    public getTag() {
        return this._tags;
    }

    public getDescriptionReponse() {
        return this._descriptionReponse;
    }
    public getMauvaiseReponseDescription() {
        return this._mauvaiseReponseDescription;
    }
    public getDescriptionQuestion() {
        return this._descriptionQuestion;
    }

    public setNbOccurence(nbOccurence: number) {
        this._nbOccurence = nbOccurence
    }
    
    public getNbOccurence() {
        return this._nbOccurence
    }
}