@startuml MDD

skinparam defaultfontname Verdana
skinparam RoundCorner 20
' skinparam linetype ortho

title Modèle du domaine


package SGB{
    class Université << (2,red) >>{}

    class CatalogueCours << (2,red)>>{}

    class Enseignant << 1,yellow) >>{
    prenom : String
    nom : String
    courriel : String
    }

    class Etudiant << 1,yellow) >>{
    nom : String
    codePermanent : String
    prenom : String
    courriel : String
    }

    class Cours << (1,blue) >>{
    id : numbers
    nom : String
    }

    class GroupeCours << 1,yellow) >>{
        id : number
        limiteNombreInscription : number
    }
}

package SGA{
    class Devoir << (2,red) >>{
        id: number
        nom: String
        description : String
        note maximale : number
        date de début : String
        date de fin : String
        visible : boolean
    }

    class Remise << (2,red) >>{
        id : number
        etat : String
        dateRemise : String

    }

    class Question << 1,yellow) >>{
        id : number
        nom : String
        tags : String
        texteQuestion : String
        texteBonneReponse : String
        texteMauvaiseReponse : String
    }

    class Questionnaire << (2,red) >>{
        id: number
        description: String
        état : boolean
    }

    class Tentative <<(3, orange) >>{
        id : number
        note : number
        statut : Sring
    }

    class QuestionChoixMultiple <<(3, orange) >> extends Question {
        reponse : String
    }

    class QuestionVraiFaux<<(3, orange) >> extends Question {
        reponse : boolean
    }

    class QuestionMiseEnCorrespondance<<(3, orange) >> extends Question {
        reponse : String
    }

    class QuestionReponseCourte<<(3, orange) >> extends Question {
        reponse : String
    }

    class QuestionNumerique<<(3, orange) >> extends Question {
        reponse : number
    }

    class EspaceCours << (2,red) >>{
        idEspaceGroupeCours : number
    }
    class Reponse << (3,orange) >>{
        reponse : String
        bonnneReponseText: String
        mauvaiseReponseText: String
    }

    class ReponseChoixMultiple << (3,orange) >> extends Reponse {

    }
    class ReponseNumerique << (3,orange) >> extends Reponse {
        ponderation: number
    }
    class ReponseVraiFaux << (3,orange) >> extends Reponse {

    }
    class ReponseMiseEnCorrespondance << (3,orange) >> extends Reponse {

    }
    class ReponseReponseCourte << (3,orange) >> extends Reponse {

    }
}

Université "1" -- "1"CatalogueCours : offre >
CatalogueCours "1"-- "*"Cours : repertorie >
Devoir "1"--"*" Remise : contient >
EspaceCours "1"--"*" Devoir: contient >
Université "1"--"*" Enseignant : emploie >
Questionnaire "1"--"1..*" Question : contient >
Université "1"--"*" Etudiant : est-inscrit-à <
Question "*"--"1" EspaceCours : contient <
Questionnaire "*"--"1" EspaceCours : contient <
Etudiant "1" -- "1..*"GroupeCours : S'inscrit-dans >
Enseignant "1" -- "*"GroupeCours : Enseigne >
Cours "1" -- "1..*" GroupeCours : décris >
GroupeCours "1"-- "1..0"EspaceCours : Est-un-support-des-activités-du <
Etudiant "1" -- "*" Remise : Crée >
Enseignant "1" -- "*" Question : Crée >
Enseignant "1" -- "*" Questionnaire : Crée >
Enseignant "1" -- "*" Devoir : Crée >
Questionnaire"1" -- "1"Tentative : est effuctué sur <
Etudiant "1" -- "1" Tentative : effectue une >
Tentative "1" -- "*" Reponse : contient >
QuestionVraiFaux "1" -- "*" ReponseVraiFaux : contient >
QuestionReponseCourte "1" -- "*" ReponseReponseCourte : contient >
QuestionNumerique "1" -- "*" ReponseNumerique : contient >
QuestionChoixMultiple "1" -- "*" ReponseChoixMultiple : contient >
QuestionMiseEnCorrespondance "1" -- "*" ReponseMiseEnCorrespondance : contient >



legend
|= |= Type |
|<back:blue>_1_</back>| Classe non modifiée première itération |
|<back:yellow>_1_</back>| Classe modifiée première itération |
|<back:red>_2_</back>| Nouvelle classe deuxième itération |
|<back:orange>_3_</back> | Nouvelle classe troisième itération |
endlegend
@enduml